--- a/templates/candidat/candidat-profil.html.twig
+++ b/templates/candidat/candidat-profil.html.twig
@@ -10,7 +10,7 @@
         {% endfor %}
 
 
-    <h1 class="text-center">Vos informations de profil</h1>
+    <h1 class="text-center mt-5">Vos informations de profil</h1>
     <ul class="list-group m-4">
         {% for candidat in candidats %}
             <li class="list-group-item"><b>Nom :</b> {{candidat.nom}}</li>
