--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,7 +10,7 @@
         {{ form_row(registrationForm.email) }}
 
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de Passe'
         }) }}
         {{ form_row(registrationForm.roles) }}
         {{ form_row(registrationForm.agreeTerms) }}
