--- a/templates/annonce/index.html.twig
+++ b/templates/annonce/index.html.twig
@@ -3,57 +3,96 @@
 {% block title %}offres d'emploi{% endblock %}
 
 {% block body %}
+
+
 <div class="container d-flex flex-column">
-    <h1 class="text-center m-4">Offres d'emploi</h1>
+    <h1 class="text-center mt-5 m-4">Offres d'emploi</h1>
 
-    {% for message in app.flashes('errorProfilCandidat') %}
-    <div class="alert alert-danger">
-        {{ message }} : <a href="{{ path('app_profil_candidat') }}"> Compléter mon profil </a>
+<section class="mt-4 ">
+<div class="container">
+            <div class="row ">
+                    <img class="col-lg-5 float-end" src="https://www.sonnenburg.at/wp-content/uploads/2023/04/chef-de-rang-stellenangebote-scaled.jpg">
+
+                <div class="col-lg-7 d-flex justify-content-center align-items-center">
+                    <p class="text-justify">TRT Conseil est une agence de recrutement spécialisée dans l’hôtellerie et la
+                        restauration. Fondée en
+                        2014, la société s’est agrandie au fil des ans et possède dorénavant plus de 12 centres dispersés aux
+                        quatre coins de la France <br> <br>
+                    <strong>Lorem Ipsum </strong>est simplement un faux texte de l'industrie de l'impression et de la composition. Le
+                        Lorem Ipsum est le texte factice standard de l'industrie depuis les années 1500, lorsqu'un
+                        imprimeur inconnu a pris une galère de caractères et l'a brouillé pour en faire un livre de
+                        spécimens de caractères. Il a survécu non seulement à cinq siècles, mais aussi au saut dans la
+                        composition électronique, restant essentiellement inchangé. Il a été popularisé dans les années
+                        1960 avec la sortie de feuilles Letraset contenant des passages de Lorem Ipsum, et plus
+                        récemment avec des logiciels de publication assistée par ordinateur comme Aldus PageMaker
+                        comprenant des versions de Lorem Ipsum.</p>
+                </div>
+
+
+            <div class="row mt-5">
+                <div class="col-xs-12">
+                    <h3 class="ml-5">Liste des jobs à pourvoir  </h3>
+
+                    <div class="infos">
+                        <p>Vous avez la possibilité de postuler aux différents jobs proposés ainsi que de déposer des
+                            annonces en vous créant un compte.</p>
+                        
+                    </div>
+
+
+                                                                        <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>Titre de l'annonce</th>
+                                    <th>Type de contrat</th>
+                                    <th>Date de début</th>
+                                    <th>Date de fin</th>
+                                    <th>Nombre d'heures semaine</th>
+                                    <th>Salaires mensuel</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>AGENT DE MAINTENANCE EN HOTELLERIE H/F TAF 2022</td>
+                                    <td>CDD</td>
+                                    <td>02-03-2022</td>
+                                    <td>31-12-2022</td>
+                                    <td>35</td>
+                                    <td>1250€</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                                                                                                                                                                                                                                                                                <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>Titre de l'annonce</th>
+                                    <th>Type de contrat</th>
+                                    <th>Date de début</th>
+                                    <th>Date de fin</th>
+                                    <th>Nombre d'heures semaine</th>
+                                    <th>Salaires mensuel</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <td>Serveur / Serveuse de restaurant (H/F)</td>
+                                    <td>CDI</td>
+                                    <td>02-03-2022</td>
+                                    <td>Pas de date de fin de contrat</td>
+                                    <td>35</td>
+                                    <td>1250€</td>
+                                </tr>
+                                </tbody>
+                            </table>
+                                                                                                        </div>
+            </div>
+        </div>
     </div>
-    {% endfor %}
-
-    {% for message in app.flashes('errorCandidatureDuplicate') %}
-        <div class="alert alert-danger">
-            {{ message }}
-        </div>
-    {% endfor %}
-    {% for message in app.flashes('success') %}
-        <div class="alert alert-success">
-            {{ message }}
-        </div>
-    {% endfor %}
-
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Poste</th>
-            <th scope="col">Lieu de travail</th>
-            <th scope="col">Description</th>
-        </tr>
-        </thead>
-        <tbody>
-        {#        boucle pour afficher chaque annonce#}
-        {% for annonce in annonces %}
-            {#          loop.index pour alterner les couleurs du tableau#}
-            {% if annonce.active == true %}
-            <tr class="table-light">
-                <th scope="row">{{ annonce.poste }}</th>
-                <td>{{ annonce.lieuDeTravail }}</td>
-                <td>{{ annonce.description }}</td>
-                {% if is_granted('ROLE_CANDIDAT') %}
-                    <td><a class="btn btn-success" href="{{path('app_candidat_postuler', {id: annonce.id})}}" role="button">Postuler</a></td>
-                {% endif %}
-            </tr>
-            {% endif %}
-
-        {% endfor %}
+    </section>
 
 
-        </tbody>
-    </table>
-    {% if is_granted('ROLE_RECRUTEUR') %}
-        <a class="btn btn-success" href="{{path('app_recruteur_ajouter_annonce')}}" role="button">Ajouter</a>
-    {% endif %}
+
+    
 
 </div>
 
