--- a/templates/candidat/completer-profil.html.twig
+++ b/templates/candidat/completer-profil.html.twig
@@ -3,14 +3,17 @@
 {% block title %}Candidat{% endblock %}
 
 {% block body %}
-
+<div class="container">
+    <div class="mt-5">
     {% for message in app.flashes('error') %}
 <div class="alert alert-danger">
     {{ message }}
 </div>
     {% endfor %}
-<h1 class="text-center">completer mon profil</h1>
 
+    <div class="mt-5">
+<h1 class="text-center">completer mon profil</h1>
+    </div>
 
     {{ form_start(form) }}
         {{ form_row(form.nom) }}
@@ -19,4 +22,6 @@
         {{ form_row(form.cvName) }}
         {{ form_row(form.Enregistrer) }}
     {{ form_end(form) }}
+</div>
+</div>
 {% endblock %}
