--- a/templates/partials/_navbar.html.twig
+++ b/templates/partials/_navbar.html.twig
@@ -48,7 +48,7 @@
                 {% endif %}
                 {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('app_register') }}">Inscriptionr</a>
+                    <a class="nav-link" href="{{ path('app_register') }}">Inscription</a>
                 </li>
                 {% endif %}
 
