--- a/templates/recruteur/recruteur-candidature-afficher.html.twig
+++ b/templates/recruteur/recruteur-candidature-afficher.html.twig
@@ -6,7 +6,7 @@
 
 {% block body %}
     <div class="container">
-        <h2 class="text-center m-4">Mes candidatures</h2>
+        <h2 class="text-center mt-5">Mes candidatures</h2>
         <table class="table table-hover">
             <thead>
             <tr>
